syntax = "proto3";

package capupdater;

service CapUpdaterService {
  rpc DownscaleCap(CapDownscale) returns (DownscaleResponse) {}
}

message CapDownscale {
  int64 accountID = 1;
  int32 delta = 2;
}

message DownscaleResponse {
  bool accepted = 1;
}